Create persistent volume claim manifest file

--- a/values.yaml
+++ b/values.yaml
@@ -29,4 +29,11 @@ service:
     port: 8081
     nodePort: 32321
   type: NodePort
-  
+
+  # Persistent Volume Claim attributs :
+  pvc:
+    name: nexus-java-pvc
+    storageClassName: nfs-client
+    resources: 
+      requests:
+        storage: 5Gi
