--- a/Chart.yaml
+++ b/Chart.yaml
@@ -22,3 +22,9 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+
+dependencies:
+  - name: nfs-subdir-external-provisioner
+    version: 4.0.14
+    repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner/
+    
