--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nexus-java
+  name: {{ .Values.service.name }}
   namespace: devops-tools
 spec:
   selector:
-    app: nexus-server-java
+    app: {{ .Values.Deployment.labels.name }}
   ports:
-  - port: 8081
+  - port: {{ .Values.service.ports.port }}
     targetPort: 8081
-    nodePort: 32321
-  type: NodePort
+    nodePort: {{ .Values.service.ports.nodePort }}
+  type: {{ .Values.service.type }}
