--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.service.name }}
-  namespace: devops-tools
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: {{ .Values.Deployment.labels.name }}
