--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
               cpu: {{ .Values.Deployment.container.resources.limits.cpu }}
             requests:
               memory: {{ .Values.Deployment.container.resources.requests.memory }}
-              cpu: {{ .Values.Deployment.container.resources.requests.memory }}
+              cpu: {{ .Values.Deployment.container.resources.requests.cpu }}
           ports:  
             - containerPort: 8081
           volumeMounts:
